juel first commit area start

--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
 
 
     <p class="big-choto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum nobis eos magni fugit? Saepe rerum aliquid inventore porro quidem impedit aliquam nesciunt non. Optio nam illum nesciunt maiores neque odio eius ipsam enim recusandae dignissimos, at laborum! Dolores quidem sunt ratione voluptatem, expedita reiciendis porro tenetur omnis, quos magnam dolore unde beatae distinctio alias harum officia vitae, iusto optio. Non suscipit quasi atque itaque exercitationem tempora. Soluta at omnis velit veritatis temporibus necessitatibus tempore, dolor repellendus inventore beatae quasi voluptas dicta nostrum! Quidem ea incidunt odit. Laboriosam esse corrupti mollitia itaque, sed quidem atque autem magnam, consequatur quibusdam fugiat ab.</p>
+
+    <div class="onno_branch_korteci">
+        <h1>Onno Branch Teke asbe - Git branch juel</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In velit fugit fugiat quos suscipit odio. Beatae doloribus quam nobis cupiditate?</p>
+    </div>
 </body>
 </html>
