grid code start

--- a/transform-simple-animation.html
+++ b/transform-simple-animation.html
@@ -10,6 +10,18 @@
 <body>
     <div class="chakum_chukum">
         <h1 class="">O</h1>
+
     </div>
+    <section class="box_main">
+        <div class="flexbox-area1 flexbox-area">
+            <div class="single-item1">skyblu-1</div>
+        </div>
+        <div class="flexbox-area2 flexbox-area">
+            <div class="single-item2">skyblu-2</div>
+        </div>
+        <div class="flexbox-area3 flexbox-area">
+            <div class="single-item3">skyblu-3</div>
+        </div>
+    </section>
 </body>
 </html>
